<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.limayeneha.todo.AddItemActivity">



    <TextView
        android:text="@string/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvItemName"
        android:layout_alignBaseline="@+id/etAddItem"
        android:layout_alignBottom="@+id/etAddItem"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp"
        android:id="@+id/etAddItem"
        android:hint="@string/new_item_hint" />

    <TextView
        android:text="@string/due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvItemName"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_alignTop="@+id/dpDatePicker"
        android:layout_alignLeft="@+id/tvItemName"
        android:layout_alignStart="@+id/tvItemName"
        android:id="@+id/tvDueDate"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dpDatePicker"
        android:layout_below="@+id/etAddItem"
        android:layout_alignLeft="@+id/etAddItem"
        android:layout_alignStart="@+id/etAddItem"
        android:layout_marginBottom="17dp"
        android:calendarViewShown="false" />


    <TextView
        android:text="@string/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDueDate"
        android:layout_alignTop="@+id/spinPriority"
        android:layout_alignLeft="@+id/spinPriority"
        android:layout_alignStart="@+id/tvDueDate"
        android:id="@+id/tvPriority"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinPriority"
        android:layout_below="@+id/dpDatePicker"
        android:layout_alignLeft="@+id/dpDatePicker"
        android:layout_alignStart="@+id/dpDatePicker"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
