<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.limayeneha.todo.EditItemDialog">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:id="@+id/fragment_edit_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbar"
        android:paddingTop="@dimen/activity_vertical_margin">



        <TextView
            android:text="@string/edit_item_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvItemNameFrag"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/text_horizontal_margin"
            android:paddingRight="18dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp"
            android:id="@+id/etEditItemFrag"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp" />

        <TextView
            android:text="@string/edit_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvItemNameFrag"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/text_horizontal_margin"
            android:layout_alignTop="@+id/dpDatePicker"
            android:layout_alignLeft="@+id/tvItemNameFrag"
            android:layout_alignStart="@+id/tvItemNameFrag"
            android:id="@+id/tvDueDateFrag"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dpDatePickerFrag"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_below="@+id/etEditItemFrag"
            android:layout_alignLeft="@+id/etEditItemFrag"
            android:layout_alignStart="@+id/etEditItemFrag"
            android:layout_marginBottom="17dp" />


        <TextView
            android:text="@string/edit_item_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDueDateFrag"
            android:layout_alignTop="@+id/spinPriorityFrag"
            android:layout_alignLeft="@+id/spinPriorityFrag"
            android:layout_alignStart="@+id/tvDueDateFrag"
            android:id="@+id/tvPriorityFrag"
            android:paddingLeft="@dimen/text_horizontal_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinPriorityFrag"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_below="@+id/dpDatePickerFrag"
            android:layout_alignLeft="@+id/dpDatePickerFrag"
            android:layout_alignStart="@+id/dpDatePickerFrag"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>


</RelativeLayout>
